--- a/hausarbeit.Rmd
+++ b/hausarbeit.Rmd
@@ -2,12 +2,14 @@
 title: "Faktoren der (In-)Stabilität von Minderheitsregierungen in Europa"
 author: "Florian Wisniewski"
 date: "`r Sys.Date()`"
-documentclass: article
 output:
+  word_document:
+    toc: yes
   pdf_document:
-    toc: TRUE
-    number_sections: TRUE
-always_allow_html: true
+    toc: yes
+    number_sections: yes
+documentclass: article
+always_allow_html: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -151,7 +153,7 @@ Daraufhin wurde der Datensatz auf die im Mittelpunkt des Forschungsinteresses st
 
 Um Vergleichbarkeit zwischen dem Vorbild des Modells von Saalfeld 2008 und den hier geschätzten Modellen zu erreichen, wurde sich logischerweise ebenfalls für die ereignisanalytische Methode der Cox Proportional Hazards-Modelle entschieden. Da in vorliegender Arbeit nur ein pooled hazards-Modell geschätzt wurde, wurden die Daten auch nur für diese Form nach rechts zensiert.
 
-Um die Modellvoraussetzungen zu überprüfen, werden für jedes in der Analyse gerechnete Modell ebenfalls auch die Schoenfeld-Residuen berechnet, um Aussagen über die Proportional Hazards Assumption treffen zu können. Nur wenn bei diesem Test alle in einem Cox-Modell einbezogenen Variablen einen p-Wert > 0.05 aufweisen konnten, d. h. nur bei einem insignifikanten Test für die Proportional Hazards Assumption bei allen Variablen in einem Modell, konnte die Nullhypothese, die PH-Assumption liege nicht vor, abgelehnt werden und das Modell konnte so bestehen bleiben (Grambsch/Therneau 1994).
+Um die Modellvoraussetzungen zu überprüfen, werden für jedes in der Analyse gerechnete Modell ebenfalls auch die Schoenfeld-Residuen berechnet, um Aussagen über die Proportional Hazards Assumption treffen zu können. Nur wenn bei diesem Test alle in einem Cox-Modell einbezogenen Variablen einen p-Wert > 0.05 aufweisen konnten, d. h. nur bei einem insignifikanten Test für die Proportional Hazards Assumption bei allen Variablen in einem Modell, konnte die Nullhypothese, die PH-Assumption liege nicht vor, abgelehnt werden und das Modell konnte so bestehen bleiben (Grambsch/Therneau 1994). Hierfür wurde auch das Paket *"survival"* in R genutzt, welches von Terry Therneau selbst erstellt wurde und regelmäßig verbessert und aktualisiert wird.
 
 Ebenso wurden, um schon vorher auf diese Problematik einzugehen, für jedes gerechnete Modell sogenannte "Heatmaps" erstellt, welche die Korrelation der Variablen untereinander darstellen. Diese sind als Graphiken im Anhang beinhaltet. Der [Online-Appendix](https://github.com/FWisniewski44/CabTerm/tree/newLib_test) der Arbeit enthält R-Code für eine interaktive Version dieser Heatmaps, welche zur schnellen Determinierung der Korrelationsmaße enorm hilfreich sind. Auf Grundlage dieser wurden dann, sofern dies der Fall war, hoch miteinander korrelierende Variablen so behandelt, dass immer eine dieser Variablen ausgeschlossen werden sollte. Dabei wurde sich immer für diejenige entschieden, für die ein geringeres Erklärungspotential oder eine geringere theoretische Kongruenz mit den Erklärungsmustern im Hinblick auf das zu rechnende Modell zu erwarten gewesen wäre.
 Eine gewisse Vergleichbarkeit der Modelle am Schluss (auch in Relation zum best fit) kann zusätzlich durch die Angabe der AIC-Werte erreicht werden.
@@ -267,13 +269,16 @@ Im dritten Bereich wurde ein Modell geschätzt, in welchem Variablen einbezogen 
 + ob ein Premierminister die Macht hat, unilateral das Parlament aufzulösen (*pm_diss_pow*)
 + ob ein Zwei-Kammern-System vorliegt (*erdda_bicam*)
 + ob ein semipräsidentielles System vorliegt (*erdda_semip*)
++ ob ein Kabinett direkt nach einer Wahl zustande kam (*post_election_cabinet*)
 
+Auch hier wurde, wie zuvor schon, der Untersuchungsdatensatz auf Korrelationen der Variablen untereinander untersucht - es konnte jedoch keine Korrelation von über 0,8 festgestellt werden, sodass keine Variable ausgeschlossen werden musste.
 
 ```{r institutions model (3), echo=FALSE, message=FALSE, warning=FALSE, paged.print=TRUE}
 # sbInst
 sbInstit <- subset(BergmannERDDA.f, select = c("discr2019", "abs_dur", "invest",
                                                "cabunan", "pm_pow",
-                                               "pm_diss_pow", "erdda_bicam", "erdda_semip"))
+                                               "pm_diss_pow", "erdda_bicam", "erdda_semip",
+                                               "post_election_cabinet"))
 
 # model fit for part III: INSTITUTIONS
 coxPH.INST <- coxph(data = sbInstit, Surv(time = sbInstit$abs_dur, event = sbInstit$discr2019, type = "right") ~ . - abs_dur - discr2019 - pm_pow - pm_diss_pow)
@@ -283,10 +288,31 @@ cox.zph(coxPH.INST)
 car::vif(coxPH.INST)
 ```
 
+Für den AIC-Wert wurde für dieses Modell ein Wert von 888 festgestellt, im Vergleich zu den vorherigen Modellen der bisher niedrigste. Beim Test auf die Proportional Hazards-Annahme wurde jedoch festgestellt, dass sowohl die Variablen *pm_pow* und *pm_diss_pow* diese verletzen, weshalb sie aus dem Modell ausgeschlossen werden mussten. Bei den verbleibenden vier Variablen befanden sich die Werte hierfür und auch für die VIF-Faktoren jedoch im annehmbaren Bereich, sodass mit diesen das Modell gerechnet werden konnte.
 
+Beim Blick auf die Signifikanzwerte wird deutlich, dass für die Variablen *invest* und für *erdda_bicam* keine Interpretierbarkeit gegeben ist, da diese statistisch insignifikant sind. Gerade im Fall des positiven Parlamentarismus ist dieser Befund interessant - hier wäre es denkbar gewesen, dass durch den Mechanismus, dass eine Regierung vor Amtsantritt explizit durch ein Investiturvotum bestätigt werden müsste, eine erhöhte Scheiterwahrscheinlichkeit gerade für Minderheitskabinette ergeben hätte können - dem ist jedoch empirisch gesehen nicht so. Hier wären in jedem Fall tiefgreifendere Untersuchungen notwendig, um noch mehr auf kausale Mechanismen hierzu eingehen zu können.
+Es können jedoch sowohl *cabunan* (2,12) als auch *erdda_semip* (2,50) interpretiert werden, da sie hochsignifikante Werte enthalten. In beiden Fällen wird aus den hazard ratios ersichtlich, dass es sich um das Scheiterrisiko sehr stark erhöhende Variablen handelt, wenn sich mit Minderheitsregierungen beschäftigt wird. Auch die Variable *post_election_cabinet* (0,50) weist einen statistisch signifikanten Koeffizienten auf.
+Auch in Saalfelds Modell sind die Werte der hazard ratios für diese Variablen sehr hoch (1,43 bzw. 3,87), wenn auch angefügt werden muss, dass für *cabunan* im dortigen Modell kein signifikanter Wert vorliegt. Dennoch geht der Effekt in die gleiche kausale Richtung, lässt man für einen Moment die Signifikanzen außer Acht.
+
+Hierbei scheint es auch in Minderheitsregierungen den kausalen Zusammenhang zwischen Einstimmigkeitsregel in Koalitionen und Scheiterwahrscheinlichkeit zu geben. Akteure versuchen generell, die Transaktionskosten innerhalb der Koalition möglichst gering zu halten. Durch die Einstimmigkeit jedoch wird dies nicht unwesentlich erschwert (vgl. Saalfeld 2008, S. 355). Gerade auch für Minderheitsregierungen, welche ohnehin immer kompromissbereit sein müssen (sei es als Minderheitskoalition oder Ein-Parteien-Minderheit), ist dieser Faktor logischerweise ausschlaggebender, als für andere Regierungsformen. So kann beispielsweise auch durch vorgezogene Neuwahlen oder durch Kabinettsumbildungen ein neuer Regierungspartner gefunden werden, eventuell auch, um die eigene Handlungsfähigkeit zu erhöhen.
+Das erhöhte Scheiterrisiko im Falle semi-präsidentieller Systeme lässt sich unter Rückgriff auf die Vetospieler-Theorie von Tsebelis erklären: durch Einbezug von mehr Vetospielern in ein System entstehen auch mehr Reibungspunkte, was auch zu politischem Stillstand oder Interessenskonflikten zwischen den Akteuren führen kann. Macht dann ein Vetospieler, wie beispielsweise ein Präsident mit starken Auflösungsmöglichkeiten für das Parlament oder die Regierung, von seinen Befugnissen gebrauch, kann sich das auf das Scheiterrisiko von Regierungen im Allgemeinen auswirken (vgl. Tsebelis 2002, S. 215ff.). Die Untersuchung hier zeigt jedoch, dass dies auch im Falle von Minderheitsregierungen der Fall sein kann. Wenn also Interessensdifferenzen zwischen dem Präsidenten und der Regierung bestehen, so kann es in diesem Fall auch zu einer erhöhten Scheiterwahrscheinlichkeit auch für diese Regierungsform kommen.
+Weiterhin kann von Kabinetten, die unmittelbar nach einer regulären Wahl zustande kamen, eine höhere Stabilität erwartet werden, als von jenen, die während einer Legislaturperiode durch Neuwahlen oder Umbildungen geformt werden bzw. werden mussten. Diermeier und Stevenson sprachen dieses Phänomen bereits 1999, auch unter Bezugnahme auf Arbeiten von Paul Warwick an (Diermeier/Stevenson 1999, S. 1061-1062).
+
+Was jedoch in jedem Fall konstatiert werden kann, ist, dass auch im Fall von Minderheitsregierungen diese beiden Variablen das Scheiterrisiko sehr stark erhöhen. Kabinette in semi-präsidentiellen Systemen scheitern mit einer um 150% erhöhten Wahrscheinlichkeit vorzeitig im Vergleich mit Systemen ohne dieses Merkmal, während Kabinette mit Einstimmigkeitsprinzip im Vergleich zu Kabinetten ohne dieses mit einer um 112% erhöhten Wahrscheinlichkeit vorzeitig scheitern. Hier decken sich also die Befunde zwischen Minderheitsregierungen und allen anderen in den Daten auftauchenden Regierungsformen.
+
+Das Scheiterrisiko für Minderheitsregierungen wird jedoch, wie auch erwartet wurde, durch den "Nachwahl-Status" von Kabinetten verringert. Kabinette, die direkt nach einer regulären Wahl zustande kamen, haben eine um 50% geringere vorzeitige Scheiterwahrscheinlichkeit, als Kabinette, die **während** einer verfassungsmäßig festgelegten Legislaturperiode geformt werden und damit näher am Ende dieser liegen.
 
 
 ### Modell 4: Bargaining Environment
+
+Für das vorletzte thematische Modell wurde sich mit der Verhandlungsumgebung und den vorgegebenen Rahmenbedingungen für Kabinette beschäftigt, in welcher die Akteure sich bewegen. Dazu wurden die folgenden Variablen aus dem Datensatz berücksichtigt:
+
++ ob das Kabinett den gleichen Premierminister hat wie das vorherige (*same_pm*)
++ die Dauer der Koalitionsverhandlungen (*erdda_barg_dur*)
++ die maximal mögliche bzw. noch übrige Regierungsdauer (*max_poss_dur*)
++ ob es sich um ein Koalitionskabinett handelt (*coal_cab*)
+
+Bei diesen Variablen wurde erneut auf Korrelationen untereinander getestet. Es konnte dabei jedoch keine höhere Korrelation als 0,40 festgestellt werden, weshalb alle Variablen so im Modell bleiben konnten.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, paged.print=TRUE}
 # sbBarg
@@ -294,10 +320,24 @@ sbBarg <- subset(BergmannERDDA.f, select = c("discr2019", "abs_dur", "same_pm", 
 
 # model fit for part IV: BARGAINING 
 coxPH.BARG <- coxph(data = sbBarg, Surv(time = sbBarg$abs_dur, event = sbBarg$discr2019, type = "right") ~ . - abs_dur - discr2019)
+extractAIC(coxPH.BARG)
 summary(coxPH.BARG)
 cox.zph(coxPH.BARG)
 car::vif(coxPH.BARG)
 ```
+
+Zuallererst wieder einige Feststellungen zum allemeinen Modell. Der Wert des AIC geht hier wieder, im Verhältnis zu den vorherigen thematisch abgegrenzten Modellen etwas nach oben (1189). Die VIF-Faktoren ergaben ebenfalls Werte im annehmbaren Bereich unter 10 und auch der Test auf die Proportional Hazards-Annahme kann als bestanden angesehen werden, da alle p-Werte hier über 0,05 lagen. Es mussten damit keine Modellanpassungen vorgenommen werden.
+
+Die Variablen *same_pm* und *coal_cab* werden in diesem Modell nicht interpretiert, da hier errechnete hazard ratios statistisch nicht signifikant sind. Es kann also kein statistisch signifikanter Einfluss auf die vorzeitige Scheiterwahrscheinlichkeit von Minderheitsregierungen angenommen werden, wenn der Premierminister sich im Vergleich zum vorigen Kabinett nicht verändert. Ebenfalls hat es keinen statistisch signifikanten Einfluss auf dieses Risiko, wenn ein Kabinett aus einer Koalition besteht oder eine Ein-Parteien-Regierung vorliegt.
+
+Dagegen weisen die Variablen *erdda_barg_dur* (1,01) und *max_poss_dur* (0,99) signifikanten Einfluss auf die Wahrscheinlichkeit vorzeitigen Regierungsscheiterns auf.
+In Bezug auf die *Dauer der Koalitionsverhandlungen* lässt sich sagen, dass dies bezüglich der Interpretierbarkeit eine gewisse Ambivalenz aufweisen kann. Wie Saalfeld zurecht anmerkt, wurde eine längere Dauer sowohl mit einer gesteigerten Aufmerksamkeit für Details der potentiellen Zusammenarbeit assoziiert (eine Annahme, die u. a. von Warwick (1994) vertreten wurde; ein Faktor, der gewährleisten könnte, dass eine Zusammenarbeit geregelter abläuft und damit das Risiko von vorzeitigen Beendigungen vermindert). Ebenso ist aber laut Saalfeld auch eine gegenteilige Interpretation dieser Variable schon vorgenommen worden: so könnte angenommen werden, dass eine längere Dauer für eine größere Komplexität des Verhandlungsumfeldes spräche (diese Ansicht sei von King et al. (1990) vertreten worden - durch diese Komplexität könne es zu einem erhöhten Risiko kommen). Er selbst merkt jedoch mit Hinblick auf das von ihm implementierte Interpretationsmodell von Lupia und Strøm (2002) an, dass solche Schlüsse nicht einfach gezogen werden könnten - stattdessen sei eine verhandlungstheoretische Interpretation, der ja auch seine gesamte Arbeit folgt, sinnvoll: es würden zahlreiche und vielschichtige Informationen in Koalitionsverhandlungen ausgetauscht, sodass die Akteure mit einem gesteigerten Informationsgehalt vorteilhaftere Bündnisse schließen könnten. Dadurch könnten nachteilige Verbindungen vermieden werden (vgl. Saalfeld 2008, S. 359). Im Licht dieser theoretischen Annahmen kann auf Basis des verhandlungstheoretischen Themenmodells die Aussage getroffen werden, dass es einen kleinen, aber positiven Effekt auf die Stabilität von Minderheitsregierungen hat, je länger die Verhandlungen dauern. Mit jedem zusätzlichen Verhandlungstag sinkt das Risiko frühzeitiger Regierungsbeendigungen um ca. 1%. Somit können Aussagen wie die von Warwick und auch die verhandlungstheoretische Position Saalfelds bestätigt werden. In Kontrast zum hiesigen Modell ist diese Interpretation bei Saalfeld aufgrund fehlender Signifikanz nicht möglich - weshalb von einem Faktor ausgegangen wird, der gerade im Kontext von Minderheitsregierungen Relevanz besitzt.
+
+Für die *maximal noch mögliche Regierungsdauer* kann in diesem Kontext erneut die Arbeit Paul Warwicks zur Interpretation herangezogen werden. Dieser konnte nachweisen, dass keine Zeitkonstanz bei der Rate von Regierungsbeendigungen vorliegt (Warwick 1994, S. 18-19). Ebenso stellten Diermeier und Stevenson fest, dass die Rate von vorgezogenen Neuwahlen stark ansteigt, je weniger Zeit bis zur nächsten regulären Wahl verbleibt (Diermeier/Stevenson 1999, S. 1065). Der Effekt dieser Variable lässt sich in vorliegendem Modell wie folgt erklären: je länger die Zeitspanne ist, die eine Minderheitsregierung noch als mögliche Regierungsdauer hat, desto geringer ist auch das Risiko ihres vorzeitigen Scheiterns. Diese Variable wurde bisher in der Forschung schon sehr oft in Modellen beinhaltet, zuletzt in größerem Ausmaß in Untersuchungen unter Beteiligung von Svenja Krauss (vgl. Krauss 2018, Krauss/Kroeber 2020, Krauss/Thürk 2021) - mit einem konstanten Ergebnis, welches auch in vorliegender Untersuchung explizit für Minderheitsregierungen erneut (vgl. Krauss/Thürk 2021) bestätigt werden konnte.
+
+
+
+
 
 
 
@@ -339,12 +379,12 @@ sbAll <- cbind(sbBarg, sbInstit, sbPreferences, sbStructure, sbCrit.Abs)
 
 #this HAS to be executed in this order!
 ## delete double discr2019 and abs_dur
-sbAll[c(7, 8, 15, 16, 24, 25, 31, 32)] <- list(NULL)
+sbAll[c(7, 8, 16, 17, 25, 26, 32, 33)] <- list(NULL)
 ## delete other double vars
 ### max_poss_dur
-sbAll[23] <- NULL
+sbAll[24] <- NULL
 ### soc_cab and cons_cab
-sbAll[c(27, 28)] <- list(NULL)
+sbAll[c(28, 29)] <- list(NULL)
 
 # get rid of NAs
 sbAll <- na.omit(sbAll)
@@ -359,15 +399,19 @@ modFull <- coxph(data = sbAll, Surv(time = sbAll$abs_dur, event = sbAll$discr201
 # stepAIC(modNull, scope = list(upper = modFull), direction = "both")
 
 # best fit as object with summary and test for ph assumption
-best.fit <- coxph(formula = Surv(time = sbAll$abs_dur, event = sbAll$discr2019, type = "right") ~ erdda_bicam + effec_parties_parl + parl_pref_range + 
-                    elect_volat + cabunan + unemploy_Abs - abs_dur - discr2019, data = sbAll)
+# best fit as object with summary and test for ph assumption
+best.fit <- coxph(formula = Surv(time = sbAll$abs_dur, event = sbAll$discr2019, type = "right") ~ 
+                    erdda_bicam + effec_parties_parl + parl_pref_range + 
+                    post_election_cabinet + erdda_barg_dur + same_pm + cab_seat_share, data = sbAll)
 extractAIC(best.fit)
 summary(best.fit)
 cox.zph(best.fit)
 car::vif(best.fit)
+ggcoxdiagnostics(best.fit, type = "schoenfeld", linear.predictions = F, ggtheme = theme_bw())
+ggcoxfunctional(best.fit)
 ```
 
-Das so mittels der step-Funktion erhaltene, am besten passende Modell wurde daraufhin extrahiert und, wie zuvor bei den Einzelmodellen auch, bezüglich des AIC-Werts (best fit bei gerundet 696), der Proportional Hazards-Annahme und der VIF-Faktoren überprüft. Für die VIF-Faktoren konnte hier festgestellt werden, dass diese sich im Rahmen bewegen (alle Faktoren unter dem gängigen Grenzwert 10).
+Das so mittels der step-Funktion erhaltene, am besten passende Modell wurde daraufhin extrahiert und, wie zuvor bei den Einzelmodellen auch, bezüglich des AIC-Werts (best fit bei gerundet 699), der Proportional Hazards-Annahme und der VIF-Faktoren überprüft. Für die VIF-Faktoren konnte hier festgestellt werden, dass diese sich im Rahmen bewegen (alle Faktoren unter dem gängigen Grenzwert 10).
 Für die PH-Assumption, welche von der schrittweisen Berechnung des Modells durch die Funktion stepAIC nicht beachtet wird, konnte festgestellt werden, dass 
 
 
@@ -405,22 +449,37 @@ kbl(tidyBestFit) %>%
 
 + Strøm, Kaare (1990): *Minority Government and Majority Rule*, Cambridge, Cambridge University Press.
 
-+ Lupia/Strøm 1995 und 2008 (chap 2)
++ Lupia/Strøm 2008er Band (chap 2)
+
++ Lupia/Strøm 1995er Modell
 
 + Diermeier/Stevenson 1999
+
++ Warwick 1994
 
 + Grofman/van Roozendal 1997
 
 + Smith, Alastair (2004): *Election Timing*
 
++ Tsebelis (2002) über Vetoplayer
+
++ Krauss (2018) Stability through control? The influence of coalition agreements on the stability of coalition cabinets
+
++ Krauss/Thürk (2021): Stability of minority governments and the role of support agreements
+
++ Krauss/Kroeber (2020): How women in the executive influence government stability
+
+ 
 
 # Abbildungsverzeichnis
 
+#### baseline plot
 ```{r baseline survival function, echo=F}
-plot(survfit(Surv(time = BergmannERDDA.f$abs_dur, event = BergmannERDDA.f$discr2019, type = "right")~1))
+plot(survfit(Surv(time = BergmannERDDA.f$abs_dur, 
+                  event = BergmannERDDA.f$discr2019, type = "right")~1))
 ```
 
-
+#### heatmap I: structure
 ```{r heatmap I: structure, echo=F}
 corStructure <- round(cor(na.omit(sbStructure)), 2)
 
@@ -428,7 +487,7 @@ corrplot(corStructure, type = "upper", method = "number", order = "hclust")
 # d3heatmap::d3heatmap(corStructure, Rowv = FALSE, Colv=FALSE)
 ```
 
-
+#### heatmap II: preferences
 ```{r heatmap II: preferences, echo=FALSE}
 # corrmatrix
 corPreferences <- round(cor(na.omit(sbPreferences)), 2)
@@ -438,17 +497,39 @@ corrplot(corPreferences, type = "upper", method = "number", order = "hclust")
 # d3heatmap::d3heatmap(corPreferences, Rowv = FALSE, Colv=FALSE)
 ```
 
-```{r table: frequencies for cons and soc, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-fre(sbPreferences$cons_cab)
-fre(sbPreferences$soc_cab)
+#### heatmap III: institutions
+```{r heatmap III: institutions, echo=FALSE, message=FALSE, warning=FALSE}
+corInstit <- round(cor(na.omit(sbInstit)), 2)
+
+# heatmaps
+corrplot(corInstit, type = "upper", method = "number", order = "hclust")
+# d3heatmap::d3heatmap(corInstit, Rowv = FALSE, Colv = FALSE)
+# exclude no var, no high correlations
+```
+
+#### heatmap IV: bargaining
+
+```{r heatmap IV: bargaining, echo=FALSE, message=FALSE, warning=FALSE, paged.print=TRUE}
+corBarg <- round(cor(na.omit(sbBarg)), 2)
+
+corrplot(corBarg, type = "upper", method = "number", order = "hclust")
+# d3heatmap::d3heatmap(corBarg, Rowv = FALSE, Colv=FALSE)
+# exclude no var, no high correlations
 ```
 
 
+#### heatmap V: critical events
 
+```{r heatmap V: crit. events, echo=FALSE, message=FALSE, warning=FALSE, paged.print=TRUE}
+corCrit.Abs <- round(cor(na.omit(sbCrit.Abs)), 2)
 
+# heatmaps
+corrplot(corCrit.Abs, type = "upper", method = "number", order = "hclust")
+# d3heatmap::d3heatmap(corCrit.Abs, Rowv = FALSE, Colv=FALSE)
+```
 
-```{r survival probability estimated: best.fit, echo=F}
-# survival probability estimated by model
+#### survival plot: estimated by best fit
+```{r survival probability estimated: best.fit, echo=F, message=FALSE, warning=FALSE}
 ggsurvplot(data = sbAll, survfit(best.fit),
            ggtheme = theme_minimal()) + 
   ggtitle(label = "Überlebenswahrscheinlichkeitvon Regierungen",
